# sing-sword

./: .gitignore  Cargo.toml  README.md  tauri.conf.json
icons/: icon.icns
src/: main.rs  service.rs  tray.rs
src/config/: mod.rs  sing_box.rs  sword.rs
src/service/: core.rs  mod.rs  tray.rs  web.rs
src/utils/: dirs.rs  init.rs  mod.rs
