[package]
name = "sing-sword"
version = "0.0.1"
description = "The proxy launch platform"
authors = ["zzzgydi"]
license = "GPL-3.0"
repository = "https://github.com/zzzgydi/sing-sword"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
log = "0.4"
open = "3.0"
warp = "0.3"
anyhow = "1.0"
log4rs = "1.0"
chrono = "0.4"
once_cell = "1.14"
serde_json = "1.0"
auto-launch = "0.4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["process-all", "shell-all", "system-tray"] }

[features]
default = [ "custom-protocol", "stdout-log" ]
custom-protocol = [ "tauri/custom-protocol" ]
stdout-log = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
